// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployeeAgendaSearchComponent matches snapshot when CDO 1`] = `
<div
  className="usa-grid-full profile-content-inner-container"
>
  <ProfileSectionTitle
    icon="user-circle-o"
    title="Employee Agenda Search"
  />
  <h4>
    <Link
      replace={false}
      to="/profile/cdo/agendaitemhistory/perdet"
    >
      View Employee History
    </Link>
  </h4>
</div>
`;

exports[`EmployeeAgendaSearchComponent matches snapshot when not CDO 1`] = `
<div
  className="usa-grid-full profile-content-inner-container"
>
  <ProfileSectionTitle
    icon="user-circle-o"
    title="Employee Agenda Search"
  />
  <h4>
    <Link
      replace={false}
      to="/profile/ao/agendaitemhistory/perdet"
    >
      View Employee History
    </Link>
  </h4>
</div>
`;
